fixed hero and projects spacing/margins

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Montserrat Alternates, sans-serif;
 	line-height: 1;
@@ -70,10 +74,10 @@ body {
 
 .section-hero {
     padding: 9.6rem 0;
+    background-color: #F9FAF8;
 }
 
 .hero-background {
-    position: absolute;
     left: 0px;
     width: 100%;
     min-height: 500px;
@@ -111,58 +115,76 @@ body {
 .hero-description {
     font-size: 2rem;
     color: #7E3887;
+    width: 800px;
 }
 
 .headshot {
     height: 400px;
     border-radius: 20px;
+    margin-top: 3.2rem;
+    padding: 3px;
+    border: 5px solid #9C89FF;
 }
 
-
-.midcontainer1 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 700px;
-    align-items: center;
-    justify-items: center;
-    margin: 12px;
-}
-
-.complete-proj {
-    margin-top: 1em;
-    font-size: 36px;
-    font-weight: bolder;
-    color: #64009e;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    width: 100%;
-}
+/********************************/
+/* PROJECTS SECTION */
+/********************************/
 
 .projects {
-    list-style: none;
+    background-color: #7E3887;
+    padding: 32px 0;
+    margin-top: 2rem;
+}
+
+.project-pic {
+    height: 250px;
+    width: 300px;
+}
+
+.projects-container {
+    display: flex;
     align-items: center;
-    flex-wrap: wrap;
-    display: inline-flex;
     justify-content: center;
 }
 
-.project-pictures {
-    width: 400px;
-    height: 300px;
-    display: block;
-    border-radius: 25px;
-    
+.projects-title {
+    text-align: center;
+    margin-bottom: 1rem;
+    color: #99CCED;
 }
 
-.caption {
-    display: block;
-    width: 100%;
+.project-container {
     text-align: center;
-    color: #64009e;
+    width: 350px;
+    padding: 1rem;
 }
+
+.project-container p {
+    padding: 0.4rem;
+}
+
+.project-title {
+    margin-bottom: 0.5rem;
+    color: #541675;
+}
+
+.project-details {
+    margin-bottom: 0.5rem;
+    color: #7E3887;
+}
+
+.project-card {
+    background-color: #99CCED;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px #541675;
+    padding: 20px;
+    margin: 10px;
+}
+
+/********************************/
+/* QUOTE SECTION */
+/********************************/
+
 
 .midcontainer2 {
     display: flex;
